# Programmentwurf

project1/: CMakeLists.txt
project1/include/: developer.h  developer_group.h
project1/src/: developer.c  developer_group.c  main.c
projekt1/: CMakeLists.txt
projekt1/include/: developer.h  developer_group.h
projekt1/src/: developer.c  developer_group.c
